# petstore_api_test

./: .env.sample  README.md  pyproject.toml  pytest.ini  requirements.txt
framework/data/: generator.py  user_data.py
framework/helpers/: assert_helper.py  auth_helper.py  pet_helper.py  response_helper.py  user_helper.py
framework/utils/: base_session.py  file_path.py  niffler_0.json  niffler_1.json  niffler_2.json  niffler_3.json
petstore_api_test/framework/data/: pet_data.py  user_data.py
petstore_api_test/framework/helpers/: assert_helper.py  auth_helper.py  pet_helper.py  user_helper.py
petstore_api_test/framework/utils/: attach.py  base_session.py  file.py  report.py
tests/: conftest.py  test_login.py  test_pet.py
tests/resources/: pets_data.csv
