[tool.poetry]
name = "petstore-api-test"
version = "0.1.0"
description = ""
authors = ["slazarska <slazarska@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.2.2"
python-dotenv = "^1.0.0"
selene = "2.0.0b16"
allure-pytest = "^2.12.0"
requests = "2.28.2"
pydantic = "^1.10.2"
pytest-xdist = "^2.5.0"
curlify = "^2.2.1"
helpers = "^0.2.0"
selenium = "4.4.3"
python-dateutil = "2.8.2"
pytz = "2021.3"
faker = "18.3.2"
jsonpath_rw = "1.4.0"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts="-vv -s --alluredir=allure-results --allure-no-capture"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
